--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "gh-pages": "^6.3.0",
     "gsap": "^3.13.0",
     "react": "^19.1.1",
